ggml/f4/511381ea9265dfe0352e5a80ac3907e3b68f43/ggml-3-arm64-cpu/ctest_debug-make.log
+ make -j
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  5%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  7%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[  8%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[  9%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 11%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 11%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 13%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 13%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 14%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 15%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 16%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 17%] Linking C executable ../bin/test-vec0
[ 18%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 19%] Linking C executable ../bin/test0
[ 20%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 21%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 22%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 23%] Linking C executable ../bin/test-mul-mat0
[ 24%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 25%] Linking CXX executable ../bin/test-opt
[ 25%] Built target test-vec0
[ 26%] Linking C executable ../bin/test1
[ 27%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 28%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 29%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 30%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 31%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 31%] Built target test0
[ 32%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 34%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 35%] Linking C executable ../bin/test2
[ 36%] Linking C executable ../bin/test3
[ 37%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 38%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 39%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 40%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 41%] Linking C executable ../bin/test-pool
[ 42%] Linking CXX executable ../bin/test-arange
[ 42%] Built target test-opt
[ 43%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 43%] Built target test1
[ 44%] Linking CXX executable ../bin/test-grad0
[ 44%] Built target test-mul-mat0
[ 45%] Linking C executable ../bin/test-rel-pos
[ 46%] Linking C executable ../bin/test-conv-transpose
[ 47%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
[ 47%] Built target test3
[ 48%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 48%] Built target test-pool
[ 48%] Built target test2
[ 49%] Linking C executable ../bin/test-customop
[ 50%] Linking C executable ../bin/test-xpos
[ 52%] Linking C executable ../bin/test-dup
[ 52%] Linking CXX executable ../bin/test-backend-buffer
[ 52%] Built target test-rel-pos
[ 52%] Built target test-conv-transpose
[ 52%] Built target test-grad0
[ 53%] Linking C executable ../bin/test-mul-mat2
[ 53%] Built target test-arange
[ 53%] Built target test-xpos
[ 53%] Built target test-backend-buffer
[ 53%] Built target test-customop
[ 53%] Built target test-dup
[ 53%] Built target test-mul-mat2
[ 54%] Linking CXX executable ../bin/test-timestep_embedding
[ 55%] Linking CXX executable ../bin/test-quantize-fns
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 56%] Linking CXX executable ../../bin/simple-ctx
[ 57%] Linking CXX executable ../../bin/mnist-cpu
[ 58%] Linking CXX executable ../bin/test-conv2d
[ 58%] Built target test-quantize-fns
[ 58%] Built target test-timestep_embedding
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 58%] Built target simple-ctx
[ 59%] Linking CXX executable ../bin/test-mul-mat
[ 59%] Built target test-conv2d
[ 60%] Linking CXX executable ../bin/test-conv1d
[ 60%] Built target mnist-cpu
[ 60%] Built target test-mul-mat
[ 61%] Linking CXX executable ../bin/test-quantize-perf
[ 62%] Linking CXX executable ../../bin/simple-backend
[ 62%] Built target test-conv1d
[ 62%] Built target test-quantize-perf
[ 62%] Built target simple-backend
/home/ggml/work/ggml/examples/whisper/whisper.cpp: In function ‘ggml_cgraph* whisper_build_graph_decoder(whisper_context&, whisper_state&, const whisper_batch&, bool, bool)’:
/home/ggml/work/ggml/examples/whisper/whisper.cpp:2591:59: error: too few arguments to function ‘ggml_tensor* ggml_concat(ggml_context*, ggml_tensor*, ggml_tensor*, int)’
 2591 |                             aheads_cross_QKs = ggml_concat(ctx0, aheads_cross_QKs, aheads_KQs);
      |                                                ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ggml/work/ggml/examples/whisper/whisper.h:4,
                 from /home/ggml/work/ggml/examples/whisper/whisper.cpp:1:
/home/ggml/work/ggml/src/../include/ggml/ggml.h:1012:35: note: declared here
 1012 |     GGML_API struct ggml_tensor * ggml_concat(
      |                                   ^~~~~~~~~~~
[ 63%] Linking CXX executable ../bin/test-backend-ops
[ 63%] Built target test-backend-ops
make[2]: *** [examples/whisper/CMakeFiles/whisper-cpp.dir/build.make:76: examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1273: examples/whisper/CMakeFiles/whisper-cpp.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 64%] Linking CXX static library libcommon.a
[ 64%] Built target common
[ 65%] Linking CXX static library libcommon-ggml.a
[ 65%] Built target common-ggml
make: *** [Makefile:146: all] Error 2

real	0m5.328s
user	0m20.087s
sys	0m2.735s
